--- a/index.html
+++ b/index.html
@@ -5,28 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ICE AND CUBES</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <!--css-->
     <link rel="stylesheet" href="css/style.css">
+    <!--pre js-->
+    <script src="https://use.fontawesome.com/913d3be366.js"></script>
 </head>
 <body>
-    
+    <header class="sticky">
+        <div class="menu">
+            <span id="menu-trigger">Menu</span>
+            <ul id="hidden-menu">
+                <li id="home">Home</li>
+                <li id="service">Services</li>
+                <li id="product">Products</li>
+                <li id="contact">Contact Us</li>
+            </ul>
+        </div>
+        <div class="site-identity">
+            <h2>ice and cubes solutions</h2>
+        </div>
+    </header>
     <div class="hero">
-        <header>
-            <div class="menu"></div>
-            <div class="site-identity"></div>
-        </header>
-        <div class="more-info"></div>
+        <div class="more-info">
+            <h6>PROVIDING YOUR WITH THE MOST RELIABLE NETWORK SOLUTIONS</h6>
+        </div>
     </div>
 
     <div class="content">
-        <div class="abt-us"></div>
-        <div class="mision"></div>
-        <div class="vision"></div>
-        <div class="strength"></div>
+        <div class="abt-us">
+            <h3>About Us</h3>
+            <p>Ice and cubes solutions is one of the leading ICT service providers in Kenya. It’s duly registered and has been in operation since 2016 as a business. It has had a tremendous growth that can be attributed to a strong team that includes a pool of experienced technical staff, hands-on management and good customer relations. The company’s client base has grown exponentially with an indelible footprint.</p>
+        </div>
+        <div class="mision">
+            <h3>Mission</h3>
+            <p>To offer quality and affordable Solutions that satisfies market needs</p>
+        </div>
+        <div class="vision">
+            <h3>Vision</h3>
+            <p>To be the leaders in service provision in the ICT sector in Africa</p>
+        </div>
+        <div class="strength">
+            <h3>Strength</h3>
+            <ul>
+                <li>Skilled Human Resource</li>
+                <li>Flexibility</li>
+                <li>Experience</li>
+                <li>Professionalism</li>
+                <li>Business Ethic</li>
+            </ul>
+        </div>
     </div>
 
     <footer>
-        <div class="icons"></div>
-        <div class="copyright"></div>
+        <div class="icons">
+            <span class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></span>
+            <span class="facebook"><i class="fa fa-facebook-official" aria-hidden="true"></i></span>
+            <span class="insta"><i class="fa fa-instagram" aria-hidden="true"></i></span>
+        </div>
+        <div class="copyright">
+            <p>All <sup>&copy;</sup>Copyrights reserved by Reilly Oduory</p>
+        </div>
     </footer>
 
     <script src="./js/index.js"></script>
