--- a/products.html
+++ b/products.html
@@ -6,21 +6,54 @@
     <title>ICE AND CUBES</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <!--pre js-->
+    <script src="https://use.fontawesome.com/913d3be366.js"></script>
 </head>
 <body>
     
-    <header>
-        <div class="menu"></div>
-        <div class="site-identity"></div>
+    <header class="sticky">
+        <div class="menu">
+            <span id="menu-trigger">Menu</span>
+            <ul id="hidden-menu">
+                <li id="home">Home</li>
+                <li id="service">Services</li>
+                <li id="product">Products</li>
+                <li id="contact">Contact Us</li>
+            </ul>
+        </div>
+        <div class="site-identity">
+            <h2>ice and cubes solutions</h2>
+        </div>
     </header>
 
     <div class="content">
-        
+        <div class="comp-accesories">
+            <h3>Computer Accesories</h3>
+            <p>We offer a variety of computer accesories ranging from mice to monitors to keyboards etc. We are a lincensed company and get our products from leading companies like Hp & Dell</p>
+        </div>
+        <div class="printers">
+            <h3>Printers and Scanners</h3>
+            <p>We offer printers and scanners and we have a large stock which is a due to the high demand due to the trust of our customers.Brands include Epison, Hp etc.</p>
+        </div>
+        <div class="cctv">
+            <h3>CCTV</h3>
+            <p>We also sell CCTV and offer setup service depending on the terms and number of products being purchased.We also offer maintenance to all our clients</p>
+        </div>
+        <div class="network-telephony">
+            <h3>Network & Telephony Services</h3>
+            <p>We provide this by creating LANs & WANs.We also help setup Intranets for willing people to share whatever they need.For this we also offer maintenance.</p>
+        </div>
     </div>
 
     <footer>
-        <div class="icons"></div>
-        <div class="copyright"></div>
+        <div class="icons">
+            <span class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></span>
+            <span class="facebook"><i class="fa fa-facebook-official" aria-hidden="true"></i></span>
+            <span class="insta"><i class="fa fa-instagram" aria-hidden="true"></i></span>
+        </div>
+        <div class="copyright">
+            <p>All <sup>&copy;</sup>copyrights reserved by Reilly Oduory</p>
+        </div>
     </footer>
 
     <script src="./js/index.js"></script>
