--- a/services.html
+++ b/services.html
@@ -6,21 +6,85 @@
     <title>ICE AND CUBES</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <!--pre js-->
+    <script src="https://use.fontawesome.com/913d3be366.js"></script>
 </head>
 <body>
     
-    <header>
-        <div class="menu"></div>
-        <div class="site-identity"></div>
+    <header class="sticky">
+        <div class="menu">
+            <span id="menu-trigger">Menu</span>
+            <ul id="hidden-menu">
+                <li id="home">Home</li>
+                <li id="service">Services</li>
+                <li id="product">Products</li>
+                <li id="contact">Contact Us</li>
+            </ul>
+        </div>
+        <div class="site-identity">
+            <h2>ice and cubes solutions</h2>
+        </div>
     </header>
 
     <div class="content">
-        
+        <div class="net-infastructure">
+            <h3>Network Infastructure</h3>
+            <ul>
+                <li>Design and Build Local Area Networks(LANs) and wide Wide Area Networks(WANs)</li>
+                <li>Wireless LANs</li>
+                <li>Data Centre</li>
+                <li>Network trouble</li>
+            </ul>
+        </div>
+        <div class="computer-solutions">
+            <h3>Computer hardware and software solutions</h3>
+            <ul>
+                <li>Sell Branded computes systems, servers, Scanners and accessories.Repair and maintenance of Computers, servers, printers, point of sales, laptops, tablets and all other ITC based systems.</li>
+                <li>Sell off the shelf software i.e. operating systems, Microsoft office, Antivirus and customized (bespoke) software i.e. Payroll, Inventory.</li>
+            </ul>
+        </div>
+        <div class="telecommunication">
+            <h3>telecommunication</h3>
+            <ul>
+                <li>IP Based, analog and digital PBXs.</li>
+                <li>VSAT to provide internet connectivity in remote areas.</li>
+            </ul>
+        </div>
+        <div class="fiber-optic">
+            <h3>Fiber Optics</h3>
+            <ul>
+                <li>Design and install fiber networks.</li>
+                <li>Fiber splicing services (Orientek T40 Splicer which is an equivalent to Fujikura s60).</li>
+                <li>Repair and troubleshoot damaged fiber links.</li>
+            </ul>
+        </div>
+        <div class="security">
+            <h3>Surveillance and Security Solutions</h3>
+            <ul>
+                <li>IP based and analog surveillance systems.</li>
+                <li>Access control and Alarm systems.</li>
+                <li>Intercom Solutions powered by Hikvision.</li>
+            </ul>
+        </div>
+        <div class="power-solutions">
+            <h3>Electrical Power Solutions</h3>
+            <ul>
+                <li>Inverter and UPS power systems.</li>
+                <li>Generator servicing</li>
+                <li>Clean raw power solutions.</li>
+            </ul>
+        </div>
     </div>
 
     <footer>
-        <div class="icons"></div>
-        <div class="copyright"></div>
+        <div class="icons">
+            <span class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></span>
+            <span class="facebook"><i class="fa fa-facebook-official" aria-hidden="true"></i></span>
+            <span class="insta"><i class="fa fa-instagram" aria-hidden="true"></i></span>
+        </div>
+        <div class="copyright">
+            <p>All <sup>&copy;</sup>copyrights reserved by Reilly Oduory</p>
+        </div>
     </footer>
 
     <script src="./js/index.js"></script>
